# eop-node-editor

./: .gitignore  .qmake.stash  CMakeLists.txt  README.md  eop-node-editor.pri  eop-node-editor.pro  eop-node-editor.sln  eop-node-editor.vcxproj  eop-node-editor.vcxproj.filters  gen_vs_sln.bat
src/app/: main.cpp  mainwindow.cpp  mainwindow.h
src/controllers/: NodeGraphController.cpp  NodeGraphController.h
src/examples/pipeline/: material.cpp  material.h  materialnodemodel.cpp  materialnodemodel.h  pipelinenodefactory.cpp  pipelinenodefactory.h  rendertarget.h  rendertargetmodel.cpp  rendertargetmodel.h
src/model/: Node.cpp  Node.h  NodeConnection.cpp  NodeConnection.h  NodeFactory.cpp  NodeFactory.h  NodeGraph.cpp  NodeGraph.h  NodeGraphLoader.cpp  NodeGraphLoader.h  NodeInput.cpp  NodeInput.h  NodeModel.cpp  NodeModel.h  NodeOutput.cpp  NodeOutput.h  NodePort.cpp  NodePort.h  NodePortModel.cpp  NodePortModel.h  NodeType.cpp  NodeType.h
src/view/: DefaultColorSchemeProvider.h  EditorColorScheme.cpp  EditorColorScheme.h  IColorSchemeProvider.h  NodeConnectionGraphicsItem.cpp  NodeConnectionGraphicsItem.h  NodeGraphScene.cpp  NodeGraphScene.h  NodeGraphView.cpp  NodeGraphView.h  NodeGraphWidget.cpp  NodeGraphWidget.h  NodeGraphicsItem.cpp  NodeGraphicsItem.h  NodePortConnectorWidget.cpp  NodePortConnectorWidget.h  NodePortGraphicsItem.cpp  NodePortGraphicsItem.h  NodePortWidget.cpp  NodePortWidget.h
src/visitor/: INodeGraphVisitor.cpp  INodeGraphVisitor.h
